--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "shopping",
     "cart"
   ],
-  "author": "Sivadass",
+  "author": "Jessie",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.1",
+    "babel-preset-es2015": "^6.24.1",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-custom-scrollbars": "^4.1.1",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^8.6.2",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -36,10 +37,10 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
